fixed form alignment

--- a/src/Register.css
+++ b/src/Register.css
@@ -57,6 +57,8 @@ input:hover{
     margin-top: 20px;
     margin-bottom: 20px;
     cursor: pointer;
+    width: 20px;
+    height: 10px;
     border: 1px solid white;
 }
 
